Actions
Bug #12651
closedvsw: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointers:
../../sun4v/io/vsw.c: In function 'vsw_mdeg_register': ../../sun4v/io/vsw.c:1438: error: assignment makes integer from pointer without a cast ../../sun4v/io/vsw.c:1439: error: assignment makes integer from pointer without a cast ../../sun4v/io/vsw.c: In function 'vsw_mdeg_unregister': ../../sun4v/io/vsw.c:1449: error: comparison between pointer and integer ../../sun4v/io/vsw.c:1452: error: comparison between pointer and integer ../../sun4v/io/vsw_txdring.c: In function 'vsw_destroy_tx_dring': ../../sun4v/io/vsw_txdring.c:397: error: comparison between pointer and integer ../../sun4v/io/vsw_txdring.c:417: error: assignment makes integer from pointer without a cast ../../sun4v/io/vsw_txdring.c:428: error: comparison between pointer and integer ../../sun4v/io/vsw_txdring.c: In function 'vsw_unmap_rx_dring': ../../sun4v/io/vsw_txdring.c:508: error: comparison between pointer and integer ../../sun4v/io/vsw_txdring.c: In function 'vsw_dringsend': ../../sun4v/io/vsw_txdring.c:803: error: comparison between pointer and integer ../../sun4v/io/vsw_ldc.c: In function 'vsw_ldc_detach': ../../sun4v/io/vsw_ldc.c:776: error: assignment makes integer from pointer without a cast ../../sun4v/io/vsw_ldc.c: In function 'vsw_ldc_cb': ../../sun4v/io/vsw_ldc.c:1249: error: comparison between pointer and integer ../../sun4v/io/vsw_ldc.c: In function 'vsw_ldcsend_pkt': ../../sun4v/io/vsw_ldc.c:3955: error: comparison between pointer and integer ../../sun4v/io/vsw_ldc.c: In function 'vsw_descrsend': ../../sun4v/io/vsw_ldc.c:4124: error: comparison between pointer and integer ../../sun4v/io/vsw_ldc.c: In function 'vsw_map_dring_cmn': ../../sun4v/io/vsw_ldc.c:4569: error: comparison between pointer and integer ../../sun4v/io/vsw_rxdring.c: In function 'vsw_destroy_rx_dring': ../../sun4v/io/vsw_rxdring.c:418: error: comparison between pointer and integer ../../sun4v/io/vsw_rxdring.c: In function 'vsw_map_tx_dring': ../../sun4v/io/vsw_rxdring.c:494: error: comparison between pointer and integer ../../sun4v/io/vsw_rxdring.c: In function 'vsw_unmap_tx_dring': ../../sun4v/io/vsw_rxdring.c:515: error: comparison between pointer and integer ../../sun4v/io/vsw_rxdring.c:518: error: assignment makes integer from pointer without a cast ../../sun4v/io/vsw_rxdring.c:530: error: comparison between pointer and integer ../../sun4v/io/vsw_rxdring.c:532: error: assignment makes integer from pointer without a cast ../../sun4v/io/vsw_rxdring.c: In function 'vsw_dringsend_shm': ../../sun4v/io/vsw_rxdring.c:880: error: comparison between pointer and integer
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 6e472272d020cb1e83ec4964e2a2f5761a354bcb
commit 6e472272d020cb1e83ec4964e2a2f5761a354bcb Author: Toomas Soome <tsoome@me.com> Date: 2020-05-10T08:01:19.000Z 12651 vsw: NULL pointer errors Reviewed by: C Fraire <cfraire@me.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions